{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 197,
  "lineage": "09fdcbc3-d656-a3a9-322d-cabdba55bef7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbaed47f0ae353f1",
            "domain": "vpc",
            "id": "eipalloc-0dbaed47f0ae353f1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-66-130.compute-1.amazonaws.com",
            "public_ip": "3.224.66.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:738087856818:instance/i-0fc925878b62d4ce3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc925878b62d4ce3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a79a9195fc816223",
            "private_dns": "ip-172-16-2-170.ec2.internal",
            "private_ip": "172.16.2.170",
            "public_dns": "ec2-54-234-9-125.compute-1.amazonaws.com",
            "public_ip": "54.234.9.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd1e59286a6c011d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb3f0746624f9898",
            "tags": {
              "Environment": "development",
              "Name": "Private_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Private_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c755f3bf5e8d76"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_private_sg",
            "aws_subnet.private_subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:738087856818:instance/i-0a5d20a936531d54f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5d20a936531d54f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b04cd547781e5f8",
            "private_dns": "ip-172-16-1-123.ec2.internal",
            "private_ip": "172.16.1.123",
            "public_dns": "ec2-44-200-128-126.compute-1.amazonaws.com",
            "public_ip": "44.200.128.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f152dfc21b5651be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f63e97697e7d3aa0",
            "tags": {
              "Environment": "development",
              "Name": "Public_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Public_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0c755f3bf5e8d76"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_private_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:internet-gateway/igw-0a5c0f6791cf2d6fe",
            "id": "igw-0a5c0f6791cf2d6fe",
            "owner_id": "738087856818",
            "tags": {
              "Name": "INTERNET_GATEWAY"
            },
            "tags_all": {
              "Name": "INTERNET_GATEWAY"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbaed47f0ae353f1",
            "connectivity_type": "public",
            "id": "nat-0381cbd355c5c2458",
            "network_interface_id": "eni-09d244a537b45346c",
            "private_ip": "172.16.1.19",
            "public_ip": "3.224.66.130",
            "subnet_id": "subnet-0f63e97697e7d3aa0",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0624c4a459d2f2cc41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0381cbd355c5c2458",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0624c4a459d2f2cc4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private1",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01739ae760c925eb81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0381cbd355c5c2458",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01739ae760c925eb8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private2",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0240f06afd1a6c6b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0381cbd355c5c2458",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0240f06afd1a6c6b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private3",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b84125c54c953f5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0381cbd355c5c2458",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b84125c54c953f5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private4",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fd983041705887bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0381cbd355c5c2458",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd983041705887bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private5",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a5c0f6791cf2d6fe",
            "id": "r-rtb-03a2aa176c698ea631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a2aa176c698ea63",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-0624c4a459d2f2cc4",
            "id": "rtb-0624c4a459d2f2cc4",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE1"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-01739ae760c925eb8",
            "id": "rtb-01739ae760c925eb8",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE2"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE2"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-0240f06afd1a6c6b6",
            "id": "rtb-0240f06afd1a6c6b6",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE3"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE3"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-0b84125c54c953f5d",
            "id": "rtb-0b84125c54c953f5d",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE4"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE4"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-0fd983041705887bd",
            "id": "rtb-0fd983041705887bd",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE5"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE5"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-03a2aa176c698ea63",
            "id": "rtb-03a2aa176c698ea63",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PUBLIC_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "PUBLIC_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5b0988781e98fc4",
            "route_table_id": "rtb-0624c4a459d2f2cc4",
            "subnet_id": "subnet-0fb3f0746624f9898"
          },
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private_subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a35ae8f9538ad56",
            "route_table_id": "rtb-01739ae760c925eb8",
            "subnet_id": "subnet-036f0fe2d33efca55"
          },
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private_subnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc9ceea4bb91bcd",
            "route_table_id": "rtb-0240f06afd1a6c6b6",
            "subnet_id": "subnet-00cd5cb9e20afd507"
          },
          "dependencies": [
            "aws_route_table.private3",
            "aws_subnet.private_subnet3",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067946613e5acfe2a",
            "route_table_id": "rtb-0b84125c54c953f5d",
            "subnet_id": "subnet-0c3a0e1f67442d7e8"
          },
          "dependencies": [
            "aws_route_table.private4",
            "aws_subnet.private_subnet4",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddb57495f3389a15",
            "route_table_id": "rtb-0fd983041705887bd",
            "subnet_id": "subnet-0d6ac18cb8ea98e39"
          },
          "dependencies": [
            "aws_route_table.private5",
            "aws_subnet.private_subnet5",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d75058143f794c0a",
            "route_table_id": "rtb-03a2aa176c698ea63",
            "subnet_id": "subnet-0f63e97697e7d3aa0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:security-group/sg-0c0c755f3bf5e8d76",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0c755f3bf5e8d76",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_ec2_private_sg",
            "name_prefix": "",
            "owner_id": "738087856818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-private-sg"
            },
            "tags_all": {
              "Name": "ec2-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-0fb3f0746624f9898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb3f0746624f9898",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE_SUBNET_1"
            },
            "tags_all": {
              "Name": "PRIVATE_SUBNET_1"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-036f0fe2d33efca55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036f0fe2d33efca55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE_SUBNET_2"
            },
            "tags_all": {
              "Name": "PRIVATE_SUBNET_2"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-00cd5cb9e20afd507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cd5cb9e20afd507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE_SUBNET_3"
            },
            "tags_all": {
              "Name": "PRIVATE_SUBNET_3"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-0c3a0e1f67442d7e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3a0e1f67442d7e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE_SUBNET_4"
            },
            "tags_all": {
              "Name": "PRIVATE_SUBNET_4"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-0d6ac18cb8ea98e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6ac18cb8ea98e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE_SUBNET_5"
            },
            "tags_all": {
              "Name": "PRIVATE_SUBNET_5"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-0f63e97697e7d3aa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f63e97697e7d3aa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBLIC_SUBNET"
            },
            "tags_all": {
              "Name": "PUBLIC_SUBNET"
            },
            "vpc_id": "vpc-099d53534bccddb22"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:vpc/vpc-099d53534bccddb22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0771fb50b40fc62eb",
            "default_route_table_id": "rtb-088db729e5e10c5ea",
            "default_security_group_id": "sg-0ae57e5fec6752a8b",
            "dhcp_options_id": "dopt-08bc84d2478e44420",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-099d53534bccddb22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088db729e5e10c5ea",
            "owner_id": "738087856818",
            "tags": {
              "Name": "terraform-demo-vpc"
            },
            "tags_all": {
              "Name": "terraform-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}